# dftracer

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  ci.yml  python-publish.yml
.gitlab/scripts/: build.sh  common.yml  compare_summary.py  create_log_dir.sh  dlio_benchmark_test.sh  generate_dlio_job.py  generate_summary.sh  generated_gitlab_ci.yml  post.sh  pre.sh  run_dlio_workload_test_ci.yaml  variables.sh
cmake/configure_files/: dftracer_config.hpp.in
cmake/modules/: dftracer-utils.cmake
dependency/: CMakeLists.txt
dfanalyzer/: main.py
dftracer/: _version.py  dynamo.py
dftracer.egg-info/: PKG-INFO  SOURCES.txt
dftracer/dbg/logger/: __init__.py  ai.py  logger.py
dftracer/lib/: __init__.py
dftracer/libs/: __init__.py
dftracer/logger/: __init__.py  ai.py  common.py  logger.py
docker/: Dockerfile
docs/: ai_logging.rst  api.rst  build.rst  conf.py  examples.rst  index.rst  models.rst  utilities.rst
examples/dfanalyzer/: dfanalyzer-distributed.ipynb  dfanalyzer.ipynb
include/dftracer/: dftracer.h
include/dftracer/core/: constants.h
include/dftracer/core/common/: constants.h
results/: cases.csv  overhead.csv
script/: dftracer_compact_by_pid  dftracer_create_index  dftracer_event_count  dftracer_split
src/dftracer/: df_logger.h  dftracer.cpp  pydftracer.cpp  pydftracer.cpp.in  pydftracer_dbg.cpp
src/dftracer/aggregator/: aggregator.cpp  aggregator.h  rules.h
src/dftracer/brahma/: posix.cpp  posix.h  stdio.cpp  stdio.h
src/dftracer/buffer/: buffer.cpp  buffer.h
src/dftracer/compression/: zlib_compression.h
src/dftracer/core/: cpp_typedefs.h  datastructure.cpp  datastructure.h  df_logger.h  dftracer_main.cpp  dftracer_main.h  enumeration.h  kokkos_hooks.cpp  mpi_collectives.cpp
src/dftracer/core/aggregator/: aggregator.cpp  aggregator.h  rules.cpp
src/dftracer/core/brahma/: posix.h
src/dftracer/finstrument/: functions.cpp  functions.h
src/dftracer/serialization/: json_line.cpp  json_line.h
src/dftracer/server/: server  server.cpp  server.h
src/dftracer/utils/: configuration_manager.cpp  configuration_manager.h  utils.h
src/dftracer/writer/: chrome_writer.cpp  chrome_writer.h  stdio_writer.h
src/function/: generic_function.h
src/function/hip/: intercept.cpp  intercept.h
test/: CMakeLists.txt  analysis_ior.py  check_file_at_least.sh
test/c/: test.c
test/py/: ai_logging.py  dynamo_test.py  hip_test.py  requirements.txt  test.py
test/yaml/: rules.yaml
(+19 files in other folders)
