[build-system]
requires = [
    "setuptools>=64", 
    "setuptools-scm>=8",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "zindex_py==0.0.4",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[tool]
files = "setup.py"
python_version = "3.7"
strict = true
dynamic = ["version"]
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
extend-select = [
  "B",    # flake8-bugbear
  "B904",
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py38"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
write_to = "dftracer/_version.py"